# fast-chat-bot

./: .gitignore  README.md  main.py  main.spec  note.md  pyproject.toml  xhj2yml.py
hook/: hook-time.py
templates/: index.html
